--- a/tiktok-backend/package.json
+++ b/tiktok-backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "engines": {
     "node": ">=13.x.x",
     "npm": ">=3.9.5"
