--- a/tiktok-backend/package.json
+++ b/tiktok-backend/package.json
@@ -18,5 +18,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.10.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.11.5"
   }
 }
